--- a/templates/index2.html
+++ b/templates/index2.html
@@ -7,18 +7,42 @@
         <link rel="stylesheet" href="../static/css/StyleSheet.css"/>
         <script src="../static/js/jquery.js"></script>
         <script src="../static/js/Script.js"></script>
-        <link rel="icon" type="image/png" href="../static/images/rsp_icon.ico">
+        <link rel="shortcut icon" href="../static/images/rsp_icon.ico">
     </head>
     <body>        
-        <center><img src="../static/images/rsp.png" width=250 height=250></center>
+        <center><img src="../static/images/rsp.png" width=200 height=200></center>
         <div>
-            <ul>
-                <li><img src="../static/images/rock_logo.png" width=100 height=100></li>
-                <li><img src="../static/images/paper_logo.png" width=100 height=100></li>
-                <li><img src="../static/images/scissor_logo.png" width=100 height=100></li>
-            </ul>
-            
-            <div id="mano_user">ajasjasjsjsjsdj</div>
-        </div>
+            <div id="user_buttons">
+                <ul>
+                    <li><img src="../static/images/rock_logo.png" width=100 height=100></li>
+                    <li><img src="../static/images/paper_logo.png" width=100 height=100></li>
+                    <li><img src="../static/images/scissor_logo.png" width=100 height=100></li>
+                </ul>
+            </div>
+                        
+            <div id="user_hand">
+                <img id="user_choice" src="../static/images/user_rock.png" width=300 height=300 style="border-radius: 5px; margin: 0px 0px -4px 0px;">
+            </div>
+
+            <div id="scores">
+                <table>
+                    <tr id="table_heads">
+                        <th>Win</th>
+                        <th>Tie</th>
+                        <th>Lose</th>
+                    </tr>
+                    <tr id="table_scores">
+                        <td>0</td>
+                        <td>0</td>    
+                        <td>0</td>
+                    </tr>
+                </table>
+            </div>
+
+            <div id="pc_hand">
+                <img id="pc_choice" src="../static/images/pc_rock.png" width=300 height=300 style="border-radius: 5px; margin: 0px 0px -4px 37px;">
+            </div>
+
+
     </body>
 </html>
