--- a/templates/index2.html
+++ b/templates/index2.html
@@ -4,24 +4,24 @@
     <head>
         <meta charset="utf-8" />
         <title>Rock-Paper-Scissors</title>
-        <link rel="stylesheet" href="../static/css/StyleSheet.css"/>
-        <script src="../static/js/jquery.js"></script>
-        <script src="../static/js/Script.js"></script>
-        <link rel="shortcut icon" href="../static/images/rsp_icon.ico">
+        <link rel="stylesheet" href="/static/css/StyleSheet.css"/>
+        <script src="/static/js/jquery.js"></script>
+        <script src="/static/js/Script.js"></script>
+        <link rel="shortcut icon" href="/static/images/rsp_icon.ico">
     </head>
     <body>        
-        <center><img src="../static/images/rsp.png" width=200 height=200></center>
+        <center><img src="/static/images/rsp.png" width=200 height=200></center>
         <div>
             <div id="user_buttons">
                 <ul>
-                    <li><img src="../static/images/rock_logo.png" width=100 height=100></li>
-                    <li><img src="../static/images/paper_logo.png" width=100 height=100></li>
-                    <li><img src="../static/images/scissor_logo.png" width=100 height=100></li>
+                    <li><img src="/static/images/rock_logo.png" width=100 height=100></li>
+                    <li><img src="/static/images/paper_logo.png" width=100 height=100></li>
+                    <li><img src="/static/images/scissor_logo.png" width=100 height=100></li>
                 </ul>
             </div>
                         
             <div id="user_hand">
-                <img id="user_choice" src="../static/images/user_rock.png" width=300 height=300 style="border-radius: 5px; margin: 0px 0px -4px 0px;">
+                <img id="user_choice" src="/static/images/user_rock.png" width=300 height=300 style="border-radius: 5px; margin: 0px 0px -4px 0px;">
             </div>
 
             <div id="scores">
@@ -40,7 +40,7 @@
             </div>
 
             <div id="pc_hand">
-                <img id="pc_choice" src="../static/images/pc_rock.png" width=300 height=300 style="border-radius: 5px; margin: 0px 0px -4px 37px;">
+                <img id="pc_choice" src="/static/images/pc_rock.png" width=300 height=300 style="border-radius: 5px; margin: 0px 0px -4px 37px;">
             </div>
 
 
