--- a/templates/index2.html
+++ b/templates/index2.html
@@ -34,9 +34,9 @@
                         <th>Lose</th>
                     </tr>
                     <tr id="table_scores">
-                        <td>0</td>
-                        <td>0</td>    
-                        <td>0</td>
+                        <td id="win_score">0</td>
+                        <td id="tie_score">0</td>    
+                        <td id="lose_score">0</td>
                     </tr>
                 </table>
             </div>
@@ -50,5 +50,8 @@
             <div id="pc_buttons">
                 <img src="../static/images/alg_logo.png" title="See what PC is thinking" width=100 height=100 style="margin-bottom: 100%;">
             </div>
+        </div>
+
+        <a href="#" onclick="javascript:resetScores();"><img src="../static/images/refresh.png" title="Restart Game" width=50 height=50 style="margin-left: 12%;"></a>
     </body>
 </html>
