--- a/templates/index2.html
+++ b/templates/index2.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="../static/css/StyleSheet.css"/>
         <script src="../static/js/jquery.js"></script>
         <script src="../static/js/Script.js"></script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
         <link rel="shortcut icon" href="../static/images/rsp_icon.ico">
     </head>
     <body>        
