Movimiento de manos

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -43,9 +43,9 @@
             </div>
 
             <div id="pc_hand">
-                <img id="rock_hand" class="show" src="../static/images/pc_rock.png" width=300 height=300 style="border-radius: 5px; margin: 0px 0px 0px 37px;">
-                <img id="paper_hand"class="hidden" src="../static/images/pc_rock.png" width=300 height=300 style="border-radius: 5px; margin: 0px 0px -4px 37px;">
-                <img id="scissors_hand" class="hidden" src="../static/images/pc_rock.png" width=300 height=300 style="border-radius: 5px; margin: 0px 0px -4px 37px;">
+                <img id="pc_rock_hand" class="show" src="../static/images/pc_rock.png" width=300 height=300 style="border-radius: 5px; margin: 0px 0px 0px 37px;">
+                <img id="pc_paper_hand"class="hidden" src="../static/images/pc_paper.png" width=300 height=300 style="border-radius: 5px; margin: 0px 0px 0px 37px;">
+                <img id="pc_scissors_hand" class="hidden" src="../static/images/pc_scissor.png" width=300 height=300 style="border-radius: 5px; margin: 0px 0px 0px 37px;">
             </div>
 
             <div id="pc_buttons">
