--- a/templates/index2.html
+++ b/templates/index2.html
@@ -54,5 +54,11 @@
         </div>
 
         <a href="#" onclick="javascript:resetScores();"><img src="../static/images/refresh.png" title="Restart Game" width=50 height=50 style="margin-left: 12%;"></a>
+
+        <div id="result_msg">
+            <div id="win" class="hidden">WIN!</div>
+            <div id="tie" class="hidden">TIE!</div>
+            <div id="lose" class="hidden">LOSE!</div>
+        </div>
     </body>
 </html>
