--- a/static/css/StyleSheet.css
+++ b/static/css/StyleSheet.css
@@ -81,6 +81,15 @@ td{
 	color: #E40000;
 }
 
+#cy {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	left: 0;
+	top: 0;
+	z-index: 999;
+}
+
 
 
 
