--- a/templates/index2.html
+++ b/templates/index2.html
@@ -5,9 +5,14 @@
         <meta charset="utf-8" />
         <title>Rock-Paper-Scissors</title>
         <link rel="stylesheet" href="../static/css/StyleSheet.css"/>
+        <link rel="stylesheet" href="../static/css/jquery.modal.css"/>
         <script src="../static/js/jquery.js"></script>
         <script src="../static/js/Script.js"></script>
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
+        <script src="../static/js/socket.io.min.js"></script>
+        <script src="../static/js/jquery.modal.js"></script>
+        <script src="../static/js/cytoscape.min.js"></script>
+        <script src="../static/js/dagre.min.js"></script>
+        <script src="../static/js/cytoscape-dagre.js"></script>
         <link rel="shortcut icon" href="../static/images/rsp_icon.ico">
     </head>
     <body>        
@@ -60,5 +65,15 @@
             <div id="tie" class="hidden">TIE!</div>
             <div id="lose" class="hidden">LOSE!</div>
         </div>
+
+        <!--<div id="cy"></div>-->
+
+        <!-- Modal HTML embedded directly into document -->
+        <div id="ex1" style="display:none;">
+        <p>Thanks for clicking.  That felt good.  <a href="#" rel="modal:close">Close</a> or press ESC</p>
+        </div>
+
+        <!-- Link to open the modal -->
+        <p><a href="#ex1" rel="modal:open">Open Modal</a></p>
     </body>
 </html>
