Agregando socket para enviar informacion de arbol

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -48,7 +48,7 @@
                 <img id="pc_scissors_hand" class="hidden" src="../static/images/pc_scissor.png" width=300 height=300 style="border-radius: 5px; margin: 0px 0px 0px 37px;">
             </div>
 
-            <div id="pc_buttons">
+            <div id="pc_buttons" onclick="javascript:showAlg(this);">
                 <img src="../static/images/alg_logo.png" title="See what PC is thinking" width=100 height=100 style="margin-bottom: 100%;">
             </div>
         </div>
