--- a/templates/index2.html
+++ b/templates/index2.html
@@ -49,12 +49,14 @@
 
             <div id="pc_hand">
                 <img id="pc_rock_hand" class="show" src="../static/images/pc_rock.png" width=300 height=300 style="border-radius: 5px; margin: 0px 0px 0px 37px;">
-                <img id="pc_paper_hand"class="hidden" src="../static/images/pc_paper.png" width=300 height=300 style="border-radius: 5px; margin: 0px 0px 0px 37px;">
+                <img id="pc_paper_hand" class="hidden" src="../static/images/pc_paper.png" width=300 height=300 style="border-radius: 5px; margin: 0px 0px 0px 37px;">
                 <img id="pc_scissors_hand" class="hidden" src="../static/images/pc_scissor.png" width=300 height=300 style="border-radius: 5px; margin: 0px 0px 0px 37px;">
             </div>
 
-            <div id="pc_buttons" onclick="javascript:showAlg(this);">
-                <img src="../static/images/alg_logo.png" title="See what PC is thinking" width=100 height=100 style="margin-bottom: 100%;">
+            <div id="pc_buttons">
+                <a href="#popup" onclick="javascript:pcThinking(this);" rel="modal:open">
+                    <img src="../static/images/alg_logo.png" title="See what PC is thinking" width=100 height=100 style="margin-bottom: 100%;">
+                </a>
             </div>
         </div>
 
@@ -66,14 +68,22 @@
             <div id="lose" class="hidden">LOSE!</div>
         </div>
 
-        <!--<div id="cy"></div>-->
+        
+        <div id="cy" class="hideCanvas"></div>
+
 
         <!-- Modal HTML embedded directly into document -->
-        <div id="ex1" style="display:none;">
-        <p>Thanks for clicking.  That felt good.  <a href="#" rel="modal:close">Close</a> or press ESC</p>
+        <div id="popup" class="modal" style="opacity: 1; display: none;">
+            <h2>DECISION TREE</h2>
+            <div id="container">
+                <div id="imgCont">
+                    <img id="imgTree" src="">
+                </div>
+                <div id="msgPred">
+                    El arbol tiene una cancion y te la canto yo
+                </div>
+            </div>
         </div>
 
-        <!-- Link to open the modal -->
-        <p><a href="#ex1" rel="modal:open">Open Modal</a></p>
     </body>
 </html>
