Mostrar info GA

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -73,21 +73,13 @@
 
         <!-- Modal HTML embedded directly into document -->
         <div id="popup" class="modal" style="opacity: 1; display: none;">
-            <h2>PATHS TREE</h2>
+            <h2></h2>
             <div id="container">
                 <div id="imgCont">
                     <img id="imgTree" src="">
                 </div>
-                <div id="msgPred">
-                    El arbol tiene una cancion y te la canto yo
-                </div>
+                <div id="msgPred"></div>
             </div>
-        </div>
-
-        <div id="initialPop" style="display:none;">
-            <h2>Rock, Paper, Scissors</h2>
-            <div>Escoja el tipo de algoritmo que desea que la computadora implemente:</div>
-            <p>Thanks for clicking.  That felt good.  <a href="#" rel="modal:close">Close</a> or press ESC</p>
         </div>
 
         <script>
