--- a/static/css/StyleSheet.css
+++ b/static/css/StyleSheet.css
@@ -106,8 +106,14 @@ h2{
 }
 
 #container{
-	margin-left: 10%;
+	margin-left: 5%;
 	font-family: georgia;
+	text-align: center;
+}
+
+.divGA{
+	width: 60% !important;
+    height: 40% !important;
 }
 
 #imgCont,#msgPred{
@@ -120,6 +126,7 @@ h2{
 
 #msgPred{
 	vertical-align: middle;
+	padding-left: 5%;
 }
 
 #initialPop{
@@ -167,6 +174,31 @@ h2{
 	cursor: pointer;
 }
 
+/* make keyframes that tell the start state and the end state of our object */
+@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+
+.fade-in {
+  opacity:0;  /* make things invisible upon start */
+  -webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
+  -moz-animation:fadeIn ease-in 1;
+  animation:fadeIn ease-in 1;
+
+  -webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
+  -moz-animation-fill-mode:forwards;
+  animation-fill-mode:forwards;
+
+  -webkit-animation-duration:0.5s;
+  -moz-animation-duration:0.5s;
+  animation-duration:0.5s;
+}
+
+.fade-in.one {
+  -webkit-animation-delay: 0.2s;
+  -moz-animation-delay: 0.2s;
+  animation-delay: 0.2s;
+}
 
 
 
