Mensaje de error de primeras 4 jugadas

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -80,6 +80,7 @@
                 </div>
                 <div id="msgPred"></div>
             </div>
+            <div id="errorMsg"></div>
         </div>
 
         <script>
